feat: add OAuth2 login handler, Gemini AI support services, Redis configuration, and WebSocket chat functionality